# leptos-exercises

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
.github/workflows/: release.yml
docs/: leptos-exercises-fb718c893697e8f.js
src/: components.rs  grid.rs  lib.rs  logic.rs  main.rs  state.rs
src/components/: app.rs  cell.rs  collision.rs  footer.rs  grid.rs
src/components/cellular/: grid.rs
src/components/collision/: block.rs  stage.rs
src/logic/: cellular.rs
src/logic/cellular/: day_n_night.rs  game_of_life.rs  state.rs  wildfire.rs
src/logic/collision/: block.rs  board.rs
src/state/: day_n_night.rs  game_of_life.rs  wildfire.rs
src/tests/: utils.rs
src/utils/: rand.rs
