[package]
name = "leptos-exercises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.8", features = ["csr", "nightly"] }
chrono = { version = "0.4.26" }
fastrand  = { version = "2.0.0" }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"